--- a/static/styles/add-styles.css
+++ b/static/styles/add-styles.css
@@ -61,6 +61,8 @@
 #file-load-label {
     margin-left: auto;
     margin-right: auto;
+    padding-top: 5px;
+    padding-bottom: 5px;
     display: inline-block;
     width: 50%;
     min-width: 150px;
@@ -102,6 +104,8 @@
 
 .button-reg {
     display: flex;
+    padding-top: 5px;
+    padding-bottom: 5px;
     width: 50%;
     min-width: 200px;
     justify-content: center;
